src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>International_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mirrors the International Speaker field on the Contact. Referenced in roll-up summary field to the Campaign, that is in turn used for sharing to international speaker group</description>
        <label>International Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSFDCCampaignMemberStatus__c</fullName>
        <label>Last SFDC Campaign Member Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date (IT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online Ad</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Google Ad</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This designates this customer as a customer to be followed up with by the sales team</inlineHelpText>
        <label>Lead? (NA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPK_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track what follow-up activities that has been made towards participants. 
This box is ticked if a MPK has been sent.</description>
        <inlineHelpText>This box is ticked if a MPK has been sent.</inlineHelpText>
        <label>MPK sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Channel__c</fullName>
        <label>Marketing Channel</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Movex__c</fullName>
        <description>Shows the Movex# of the Account to which the Contact belongs</description>
        <formula>Contact.Account.Movex__c</formula>
        <inlineHelpText>Shows the Movex# of the Account to which the Contact belongs</inlineHelpText>
        <label>Movex#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Contact_To_Call__c</fullName>
        <description>Previous: My_Contact__c
TFUS-000004267
TFUS-000004599
TFUS-000004667</description>
        <formula>IF(
 OR(TEXT($User.User_Country__c)= &apos;USA&apos;, TEXT($User.User_Country__c)= &apos;Canada&apos;),
 IF(CampaignMemberOwner__c &lt;&gt; null,
     IF(CampaignMemberOwner__c = $User.Id,true,false),
     IF(NOT(ISBLANK(ContactId)),
         Contact.My_Contact__c,
        IF( ISBLANK($User.Movex_Uer_ID__c),FALSE, CONTAINS(Account.DC_ETM_Code__c , $User.Movex_Uer_ID__c ))
     )
 ) 
 ,
 IF(CampaignMemberOwner__c = $User.Id,
     true, 
     false
 ) 
)</formula>
        <inlineHelpText>IF(
 OR(TEXT($User.User_Country__c)= &apos;USA&apos;, TEXT($User.User_Country__c)= &apos;Canada&apos;),
 IF(NOT(ISBLANK(ContactId)),
    Contact.My_Contact__c,
    IF( ISBLANK($User.Movex_Uer_ID__c),FALSE, CONTAINS(Account.DC_ETM_Code__c , $User.Movex_Uer_ID__c ))
 ),
 IF(CampaignMemberOwner__c = $User.Id,
     true, 
     false
 ) 
)</inlineHelpText>
        <label>My Contact/Account To Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPIPractitionerID__c</fullName>
        <formula>IF(ISBLANK(ContactId),Lead.NPIPractitionerID__c,Contact.Practitioner_ID_NPI_in_US__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPI/Practitioner ID?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_contact__c</fullName>
        <description>Ticks the checkbox if the Contact is created no more than 10 days before the Campaign started</description>
        <formula>IF( DATEVALUE(Contact.CreatedDate)  &gt;=   (  Campaign.StartDate  -10), TRUE, FALSE)</formula>
        <label>New contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Attendees__c</fullName>
        <description>Checks if this Campaign Member belongs to the group &quot;Other Attendees&quot;. Used for ADA-CERP</description>
        <formula>AND( Dental_Assistant__c = FALSE,  Dentist__c = FALSE,  Hygenist__c = FALSE,  Student__c = FALSE,  Technicians__c = FALSE,  Business_Team_Member__c = FALSE)</formula>
        <inlineHelpText>Checks if this Campaign Member belongs to the group &quot;Other Attendees&quot;. Used for ADA-CERP</inlineHelpText>
        <label>Other Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payer_Movex_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Movex Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Clinical Customer (D), DEX D Customer, Lab Customer (D)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_Movex__c</fullName>
        <description>If the Campaign Member has a specific Payer it it the Payers&apos; ERP# that is listed in this field. If the Campaign Member does not have a Payer the Contacts own ERP# is listed</description>
        <formula>IF(ISBLANK( Payer_Movex_Account__c ),  Contact.Movex_Contact__c ,  Payer_Movex_Account__r.Movex__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Campaign Member has a specific Payer it it the Payers&apos; ERP# that is listed in this field. If the Campaign Member does not have a Payer the Contacts own ERP# is listed</inlineHelpText>
        <label>Payer ERP #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_By__c</fullName>
        <label>Payment By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Dentsply Company</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Other Payer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Comment__c</fullName>
        <label>Payment Comment (IT)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status (IT)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>To be invoiced</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Not to be invoiced</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Automatic Debit Transfer System</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>STEPPS Points</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Voucher</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Loyalty program points</fullName>
                </value>
                <value>
                    <fullName>Mixed payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Dynamic field that will show the Phone Number of the Member if the Contact belongs to your territories.</description>
        <formula>IF( CONTAINS( Contact.TerritoryUsers__c ,  $User.Movex_Uer_ID__c ) ,  Contact.Phone , &quot;####&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_ID_NPI_in_US__c</fullName>
        <formula>Contact.Practitioner_ID_NPI_in_US__c</formula>
        <label>Practitioner ID (NPI in US)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Ranking__c</fullName>
        <description>Used for the operations team to provide priority/ranking for campaign members to call</description>
        <label>Priority/Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>TFUS-000003959
Used by Inside Sales Reps to order their reports by the right campaign members prioritization (initially defined upon mass importing campaign members)</description>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <description>Shows the Contact Profession. Used in Page Layout etc</description>
        <formula>IF( ISPICKVAL(Contact.Account.Owner.Market__c,&quot;Switzerland&quot;) , TEXT(Contact.Profession_D_CH__c) , TEXT(Contact.Profession__c))</formula>
        <inlineHelpText>Shows the Contact Profession.</inlineHelpText>
        <label>Profession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_per_night__c</fullName>
        <label>Rate/Night</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referred_UK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track what follow-up activities that has been made towards participants.
This box is ticked if the participant has refferred a patient.</description>
        <inlineHelpText>This box is ticked if the participant has refferred a patient.</inlineHelpText>
        <label>Referred (UK)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refresher_Restorative_Training__c</fullName>
        <description>Used to track what follow-up activities that has been made towards participants.</description>
        <label>Refresher Restorative Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RoleProfession__c</fullName>
        <formula>IF(ISBLANK(ContactId),TEXT(Lead.RoleProfession__c),TEXT(Contact.Profession__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role/Profession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLeadOwner__c</fullName>
        <formula>SalesLead__r.Sales_Rep__r.Full_Name__c</formula>
        <label>Sales Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Lead</label>
        <referenceTo>Field_Sales_Project_Members__c</referenceTo>
        <relationshipLabel>Campaign Members (Sales Lead)</relationshipLabel>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Lead_Opportunity__c</fullName>
        <formula>IF(ISBLANK(SalesLead__c),  IF(ISBLANK(Opportunity__c), NULL,  HYPERLINK(&quot;/&quot; &amp; Opportunity__c, Opportunity__r.Name,&apos;_self&apos;) ) , HYPERLINK(&quot;/&quot; &amp; SalesLead__c , SalesLead__r.Name,&apos;_self&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simplant_Won_Lost_Status__c</fullName>
        <label>Simplant Won/Lost Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Diet_Allergies__c</fullName>
        <label>Special Diet/Allergies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <formula>IF(ISBLANK(ContactId),TEXT(Lead.Specialty__c),TEXT(Contact.Specialty__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This fields displays a text version of the Status field on Campaign Members. Used to override the fact that you can not have a read only version of the original Status field on the Page Layout</description>
        <formula>TEXT(Status)</formula>
        <inlineHelpText>This fields displays a text version of the Status field on Campaign Members. Used to override the fact that you can not have a read only version of the original Status field on the Page Layout</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>Contact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <description>Checks if this Campaign Member is a Student. Used for ADA-CERP</description>
        <formula>OR( ISPICKVAL( Contact.Profession__c , &quot;Dental Student&quot;), ISPICKVAL( Contact.Profession__c , &quot;Post Graduate trainee&quot;), ISPICKVAL( Contact.Profession_D_CH__c , &quot;Post Graduate trainee&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Dental Student&quot;), ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Post Graduate trainee&quot;))</formula>
        <inlineHelpText>Checks if this Campaign Member is a Student. Used for ADA-CERP</inlineHelpText>
        <label>Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSM_attended_restoration__c</fullName>
        <description>Used to track what follow-up activities that has been made towards participants.</description>
        <inlineHelpText>Add the date when the TSM attended restoration.</inlineHelpText>
        <label>TSM attended restoration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <description>Shows the Target Type from the Contact</description>
        <formula>TEXT(Contact.Target_Type__c)</formula>
        <inlineHelpText>Shows the Target Type from the Contact</inlineHelpText>
        <label>Target Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technicians__c</fullName>
        <description>Checks if this Campaign Member is a Technician. Used for ADA-CERP</description>
        <formula>OR( ISPICKVAL( Contact.Profession__c , &quot;Dental Technician&quot;),ISPICKVAL( Contact.Profession_D_CH__c , &quot;Dental Technician&quot;),ISPICKVAL( Contact.Sub_Contact_Type__c , &quot;Dental Technician&quot;), ISPICKVAL(Contact.Sub_Contact_Type__c , &quot;Dental Technician Master&quot;))</formula>
        <inlineHelpText>Checks if this Campaign Member is a Technician. Used for ADA-CERP</inlineHelpText>
        <label>Technicians</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Fee__c</fullName>
        <formula>Course_Fee__c  - Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Arranged_by_DI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Arranged by DI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Details__c</fullName>
        <label>Transfer Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>Moderator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                    <default>true</default>
                    <label>Participant</label>
                </value>
                <value>
                    <fullName>Sales Staff</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Speaker &amp; Moderator</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Source__c</fullName>
        <label>URL Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Email_In_Campaign__c</fullName>
        <description>This is a unique firld populate by PB that is only allowing to have on email address percamapaing.
CampaignID+Member email</description>
        <label>Unique Email In Campaign</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VoucherCode__c</fullName>
        <label>VoucherCode</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>of_Guests_including_participant__c</fullName>
        <label>Room Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Room</fullName>
                </value>
                <value>
                    <fullName>Double Room</fullName>
                </value>
                <value>
                    <fullName>Suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Digital_Marketing_Campaign_Member</fullName>
        <active>true</active>
        <label>Digital Marketing Campaign Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>InPersonEventCampaignMember</fullName>
        <active>true</active>
        <label>In-Person or Virtual Event Campaign Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Campaign_Member</fullName>
        <active>true</active>
        <label>Standard Campaign Member</label>
    </recordTypes>
    <sharingModel>ControlledByCampaign</sharingModel>
    <validationRules>
        <fullName>Dealer_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Campaign.AssignRepFromDealer__c = true, ISBLANK(Dealer__c),  OR(Campaign.RecordType.DeveloperName = &apos;Digital_Marketing_Campaign&apos;, Campaign.RecordType.DeveloperName = &apos;InPersonEventCampaign&apos;),  $User.User_ID_18_digit__c != &apos;0056M00000A14bnQAB&apos;,  OR(ISPICKVAL(Status, &apos;Visited&apos;), ISPICKVAL(Status, &apos;Responded&apos;)))</errorConditionFormula>
        <errorDisplayField>Dealer__c</errorDisplayField>
        <errorMessage>Please note! For this Campaign, you need to assign a Dealer to each Campaign Member</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_null_email_contact_member</fullName>
        <active>true</active>
        <errorConditionFormula>Campaign.RecordType.DeveloperName = &apos;Digital_Marketing_Campaign&apos; &amp;&amp;  ContactId != null  &amp;&amp;  Contact.Email = &apos;&apos;</errorConditionFormula>
        <errorMessage>One contact does not have email address. Please update the email in the contact before adding it to a digital campaign.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UK_Only_coordinators_can_add_members</fullName>
        <active>false</active>
        <description>Only Campaign coordinators are allowed to add campaign members in UK</description>
        <errorConditionFormula>AND(Campaign.Campaign_Coordinator__r.Id &lt;&gt; $User.Id , TEXT($User.User_Country__c) = &quot;UK&quot;,  TEXT($User.User_Type__c) = &quot;Sales representative&quot;)</errorConditionFormula>
        <errorMessage>Only campaign coordinators are allowed to add campaign members</errorMessage>
    </validationRules>
</CustomObject>